# cbm2usb

./: CMakeLists.txt  README.md  foot.scad
sch/: README.md  edge.scad  edge.stl  foot.scad  foot.stl  matrix.dig  parts.stl
src/: CMakeLists.txt  kb1.c  kb2.c  kb3.c  kb4.c  kb5.c  kb6.c  vice.vkm
tinyusb_kb/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
